--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,10 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.31</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.4</version>
+		</dependency>
 	</dependencies>
 </project>
