--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.13.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.3</version>
+		</dependency>
 	</dependencies>
 </project>
