--- a/pom.xml
+++ b/pom.xml
@@ -28,4 +28,17 @@
 			<version>2.12.4</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+    <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.0.0</version>
+            <configuration>
+                <mainClass>com.revature.Driver</mainClass>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
