adding example project with jdbc and controllers

--- a/pom.xml
+++ b/pom.xml
@@ -41,4 +41,17 @@
 			<version>42.3.3</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<mainClass>com.revature.Driver</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
